--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ dependencies:
   webview_flutter: ^0.3.22+1
 #  flutter_webview_plugin: ^0.3.11
 
-  #
+  # 跳转第三方App
   url_launcher: ^5.1.6
 
 dev_dependencies:
